--- a/app.html
+++ b/app.html
@@ -21,7 +21,7 @@
           <a class="pill" href="index.html">Home</a>
           <a class="pill active" href="app.html">App</a>
           <a class="pill" href="index.html#youtube">YouTube</a>
-          <a class="pill" href="index.html#work">Work</a>
+          <a class="pill" href="work.html">Work</a>
           <a class="pill" href="index.html#about">About</a>
           <a class="pill" href="index.html#contact">Contact</a>
         </nav>
